# security_recon

./: .gitignore  Dockerfile  README.md  application.py  pyproject.toml  requirements.txt
app/: __init__.py  backend.py  cli.py  streamlit_app.py
core/: __init__.py  database.py  logging.py
pipelines/: __init__.py  classify.py  dictionary.py  diff.py  extract.py  io_parquet.py  metrics.py  recon.py  run.py
resources/: application.yml  data_dictionary.yml
services/: __init__.py  database_service.py
src/main/python/security_recon/: __init__.py
src/main/python/security_recon/client/: api_client.py  streamlit_ui.py  ui_api_wrapper.py
src/main/python/security_recon/controller/: __init__.py  api.py  backend.py  cli.py  frontend_app.py  pipeline_orchestrator.py  pipeline_runner_cli.py
src/main/python/security_recon/domain/: __init__.py  api_models.py  artifact.py  dictionary.py  dictionary_loader.py  metrics.py
src/main/python/security_recon/integration/: __init__.py  parquet_writer.py  s3_uploader.py
src/main/python/security_recon/repositories/: __init__.py  artifact_repository.py  data_models.py  metrics_repository.py  models.py  security_repository.py
src/main/python/security_recon/service/: __init__.py  database_service.py  recon.py  run.py
src/main/python/security_recon/support/: __init__.py  config.py  database_manager.py  database_service.py  logging.py  paths.py
src/main/resources/: application.yml  data_dictionary.yml
src/test/python/security_recon_tests/: __init__.py
tests/pipelines/: test_extract.py  test_recon.py
(+9 files in other folders)
